<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343e56"
    tools:context=".PlayerSetup">

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@drawable/blue_button"
        android:onClick="startGame"
        android:text="@string/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2Name" />

    <EditText
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Name_hint"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1Name" />

    <EditText
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/Name_hint"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/PlayerSetupTitle"
        android:textSize="40sp"
        android:textColor="#62AF8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label1"
        android:textSize="20sp"
        android:textColor="#D56C6C"
        app:layout_constraintBottom_toTopOf="@+id/player1Name"
        app:layout_constraintStart_toStartOf="@+id/player1Name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label2"
        android:textSize="20sp"
        android:textColor="#C8AE6B"
        app:layout_constraintBottom_toTopOf="@+id/player2Name"
        app:layout_constraintStart_toStartOf="@+id/player2Name" />
</androidx.constraintlayout.widget.ConstraintLayout>